--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Creando Repositorio desde GitHub.</h1>
+    <p>Este es el primer parrafo que creamos aqui.</p>
+    <p>este es el segundo parrafo que creamos tambien aqui.</p>
 </body>
 </html>
